change user Settings
pfade einheitlich